@@ -9,6 +9,11 @@ apport (0.149) UNRELEASED; urgency=low
   * setup.py: Move *.mo generation/installation into my_install_data class,
     for cleanliness.
   * setup.py: Fix homepage URL.
+  * Move installation of missing packages for retracing from
+    bin/apport-retrace to new abstract interface apport/packaging.py,
+    install_retracing_packages() and remove_packages(), and move the apt/dpkg
+    code to backends/packaging-apt-dpkg.py. This removes a major piece of
+    apt/dpkg specific code from non-backends.
 
  -- Martin Pitt <martin.pitt@ubuntu.com>  Sat, 04 Apr 2009 10:38:53 -0700
 
